add debug and add contacts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
    </main>
 
    <footer id="contact">
-      Contact info goes here:
+      <div id="contact-wrapper">
+         <div>
+            <a href="https://github.com/bohdandrahan">
+               <img src="images/bad_github_logo.png" alt="bat github logo" style="width:42px;height:42px;">
+            </a>
+         </div>
+         <div> <a href="https://www.instagram.com/bohdandrah/">
+               <img src="images/bad_insta_logo.png" alt="bad insta logo" style="width:42px;height:42px;">
+            </a>
+         </div>
+         <div> <a href="https://www.linkedin.com/in/bohdandrahan/">
+               <img src="images/bad_linkedin_logo.png" alt="bad linkedin logo" style="width:42px;height:42px;">
+            </a>
+         </div>
+         <div> <a href="https://bohdandrahan.com">
+               <img src="images/bad_website_logo.png" alt="bad website logo" style="width:42px;height:42px;">
+            </a>
+         </div>
+      </div>
+
    </footer>
 
    <footer id="copyright">
