add music, add animation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
    </footer>
 
    <script src="./scripts/libraries/p5.min.js"></script>
+   <script src="./scripts/libraries/p5.sound.min.js"></script>
    <script src="./scripts/birdhouse.js"></script>
 </body>
 
