looks good, maybe a final product?

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
 <body>
    <header>
-      Hello Friend
+      <div id="contact-wrapper">
+         <div style="margin-right: 30%;"> Hello Friend </div>
+         <div>
+            <a href="https://github.com/bohdandrahan/birdhouse">
+               <img src="images/bad_github_logo.png" alt="bat github logo" style="width:29px;height:29px;">
+            </a>
+         </div>
+         <div> <a href="https://bohdandrahan.com">
+               <img src="images/bad_website_logo.png" alt="bad website logo" style="width:29px;height:29px;">
+            </a>
+         </div>
+      </div>
    </header>
 
    <main>
@@ -19,26 +30,12 @@
       </div>
    </main>
 
-   <footer id="contact">
-      <div id="contact-wrapper">
-         <div>
-            <a href="https://github.com/bohdandrahan">
-               <img src="images/bad_github_logo.png" alt="bat github logo" style="width:42px;height:42px;">
-            </a>
-         </div>
-         <div> <a href="https://www.instagram.com/bohdandrah/">
-               <img src="images/bad_insta_logo.png" alt="bad insta logo" style="width:42px;height:42px;">
-            </a>
-         </div>
-         <div> <a href="https://www.linkedin.com/in/bohdandrahan/">
-               <img src="images/bad_linkedin_logo.png" alt="bad linkedin logo" style="width:42px;height:42px;">
-            </a>
-         </div>
-         <div> <a href="https://bohdandrahan.com">
-               <img src="images/bad_website_logo.png" alt="bad website logo" style="width:42px;height:42px;">
-            </a>
-         </div>
-      </div>
+   <footer id="credits">
+      Credits: Music:
+      <a href="https://micromecha.bandcamp.com/album/time-flows-constantly">
+         Time Flows Constantly
+         by MICROMECHA
+      </a>
 
    </footer>
 
