--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="images/birdhouse.gif" type="image/x-icon">
    <title>Birdhouse</title>
    <link rel="stylesheet" href="main.css">
 </head>
